Move button to left to ensure visibility
If pages with very long IDs are used the table may be broader than the
dokuwiki page, which will cause the right overflow to be hidden. This
may cause the button to be hidden as well.

--- a/style.css
+++ b/style.css
@@ -68,5 +68,5 @@ div.approval span span.approval_date {
 }
 
 button.publish__approveNS {
-    float: right;
+    float: left;
 }
